{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 48,
  "lineage": "1342ad61-036e-5c9a-4e49-61b524dc6ceb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0798d7fd5a7858efc",
            "arn": "arn:aws:ec2:ap-south-1:604035090292:elastic-ip/eipalloc-0798d7fd5a7858efc",
            "association_id": "eipassoc-0472001047e024f3f",
            "domain": "vpc",
            "id": "eipalloc-0798d7fd5a7858efc",
            "instance": "i-0176790a492a5a7a9",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0704ddc373d4ec98a",
            "private_dns": "ip-10-0-1-244.ap-south-1.compute.internal",
            "private_ip": "10.0.1.244",
            "public_dns": "ec2-13-126-224-112.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.224.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "resume-analyzer-eip",
              "Project": "resume-analyzer"
            },
            "tags_all": {
              "Name": "resume-analyzer-eip",
              "Project": "resume-analyzer"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.main",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2f85bcae7ec46bd",
            "arn": "arn:aws:ec2:ap-south-1:604035090292:instance/i-0176790a492a5a7a9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "resume-analyzer-ec2-profile",
            "id": "i-0176790a492a5a7a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "resumekeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0704ddc373d4ec98a",
            "private_dns": "ip-10-0-1-244.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.244",
            "public_dns": "ec2-13-126-99-49.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.99.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e77515585da2e1fc",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e0f456fd04bd226",
            "tags": {
              "Name": "resume-analyzer-ec2",
              "Project": "resume-analyzer"
            },
            "tags_all": {
              "Name": "resume-analyzer-ec2",
              "Project": "resume-analyzer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f0598c0a49fa9b9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:604035090292:internet-gateway/igw-0bc8ffb42cf33228c",
            "id": "igw-0bc8ffb42cf33228c",
            "owner_id": "604035090292",
            "tags": {
              "Name": "resume-analyzer-igw",
              "Project": "resume-analyzer"
            },
            "tags_all": {
              "Name": "resume-analyzer-igw",
              "Project": "resume-analyzer"
            },
            "vpc_id": "vpc-0bfc74ec065af0e3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:604035090292:route-table/rtb-0b06b5f819e9ced6f",
            "id": "rtb-0b06b5f819e9ced6f",
            "owner_id": "604035090292",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc8ffb42cf33228c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "resume-analyzer-public-rt",
              "Project": "resume-analyzer"
            },
            "tags_all": {
              "Name": "resume-analyzer-public-rt",
              "Project": "resume-analyzer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfc74ec065af0e3e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9f785e347bd6678",
            "route_table_id": "rtb-0b06b5f819e9ced6f",
            "subnet_id": "subnet-04e0f456fd04bd226"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:604035090292:security-group/sg-08f0598c0a49fa9b9",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f0598c0a49fa9b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nginx HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nginx HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Streamlit internal VPC only",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8501
              },
              {
                "cidr_blocks": [
                  "45.119.30.133/32"
                ],
                "description": "Grafana your IP only",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "45.119.30.133/32"
                ],
                "description": "Jenkins UI your IP only",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "45.119.30.133/32"
                ],
                "description": "Prometheus your IP only",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "45.119.30.133/32"
                ],
                "description": "SSH from your IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "resume-analyzer-ec2-sg",
            "name_prefix": "",
            "owner_id": "604035090292",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "resume-analyzer-ec2-sg",
              "Project": "resume-analyzer"
            },
            "tags_all": {
              "Name": "resume-analyzer-ec2-sg",
              "Project": "resume-analyzer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfc74ec065af0e3e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:604035090292:security-group/sg-0861c371e7439e791",
            "description": "Security group for RDS - EC2 access only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0861c371e7439e791",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2 only",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f0598c0a49fa9b9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "resume-analyzer-rds-sg",
            "name_prefix": "",
            "owner_id": "604035090292",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "resume-analyzer-rds-sg",
              "Project": "resume-analyzer"
            },
            "tags_all": {
              "Name": "resume-analyzer-rds-sg",
              "Project": "resume-analyzer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfc74ec065af0e3e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:604035090292:subnet/subnet-01875ecfb5614f49f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01875ecfb5614f49f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "604035090292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resume-analyzer-private-subnet-a",
              "Project": "resume-analyzer"
            },
            "tags_all": {
              "Name": "resume-analyzer-private-subnet-a",
              "Project": "resume-analyzer"
            },
            "vpc_id": "vpc-0bfc74ec065af0e3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:604035090292:subnet/subnet-0604123d9929abfe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0604123d9929abfe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "604035090292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resume-analyzer-private-subnet-b",
              "Project": "resume-analyzer"
            },
            "tags_all": {
              "Name": "resume-analyzer-private-subnet-b",
              "Project": "resume-analyzer"
            },
            "vpc_id": "vpc-0bfc74ec065af0e3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:604035090292:subnet/subnet-04e0f456fd04bd226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e0f456fd04bd226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "604035090292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resume-analyzer-public-subnet",
              "Project": "resume-analyzer"
            },
            "tags_all": {
              "Name": "resume-analyzer-public-subnet",
              "Project": "resume-analyzer"
            },
            "vpc_id": "vpc-0bfc74ec065af0e3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:604035090292:vpc/vpc-0bfc74ec065af0e3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0195abe667265f016",
            "default_route_table_id": "rtb-044222872b4c6e7f1",
            "default_security_group_id": "sg-00075a3e5f8762cbc",
            "dhcp_options_id": "dopt-0185829d695bf1b7c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bfc74ec065af0e3e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044222872b4c6e7f1",
            "owner_id": "604035090292",
            "tags": {
              "Name": "resume-analyzer-vpc",
              "Project": "resume-analyzer"
            },
            "tags_all": {
              "Name": "resume-analyzer-vpc",
              "Project": "resume-analyzer"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}